# Python_06

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
