[tool.poetry]
name = "python-06"
version = "0.1.0"
description = ""
authors = ["Rafael Alvarenga <devrafaelalvarenga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
black = "^24.4.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
